<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EqualizerApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="configure_page">Configure</string>
    <string name="save_page">Saves</string>
    <string name="tutorial_page">Tutorial</string>
    <string name="action_back">ic_action_back</string>
    <string name="configure_page_name">Configurations Page</string>
    <string name="saves_page_name">Saves Page</string>

</resources>
