<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/save_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/configure_page"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:onClick="openSavePage"
        android:text="@string/save_page" />

    <Button
        android:id="@+id/tutorial_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/save_page"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:onClick="openTutorialPage"
        android:text="@string/tutorial_page" />

    <Button
        android:id="@+id/configure_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:onClick="openConfigPage"
        android:text="@string/configure_page" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="71dp"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>